--- a/www/admin/pages/info.html
+++ b/www/admin/pages/info.html
@@ -1,73 +1,212 @@
 
-<h2>Peers</h2>
 
-<div ng-repeat="org in ctl.getOrgs()">
-  <blockquote>
-    {{::org.name}}
-  </blockquote>
-  <ul>
-    <li ng-repeat="peer in ctl.getPeers(org.id)">{{::peer['server-hostname']}}</li>
-  </ul>
+<div class="admin-layout">
+  <div class="admin-layout-left">
+    <h2 class="admin-h2">Network info</h2>
+    <div class="admin-dropdown">
+      <input type="checkbox" id="peers">
+      <label class="admin-dropdown-header" for="peers">
+        <span class="admin-dropdown-header-name">
+            Peers
+            <svg class="chevron" width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.5 6L0.870834 0L12.1292 0L6.5 6Z" fill="white"/>
+            </svg>
+        </span>
+      </label>
+      <div class="admin-dropdown-content">
+        <div ng-repeat="org in ctl.getOrgs()">
+          <dl>
+              <dt>
+                {{::org.name}}
+              </dt>
+              <dd ng-repeat="peer in ctl.getPeers(org.id)">{{::peer['server-hostname']}}</dd>
+          </dl>
+        </div>
+      </div>
+    </div>
+
+    <div class="admin-dropdown">
+      <input type="checkbox" id="uploaded-chaincodes">
+      <label class="admin-dropdown-header" for="uploaded-chaincodes">
+        <span class="admin-dropdown-header-name">
+            Uploaded Chaincodes
+            <svg class="chevron" width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M6.5 6L0.870834 0L12.1292 0L6.5 6Z" fill="white"/>
+            </svg>
+        </span>
+        <span class="admin-dropdown-header__quantity">
+          {{ctl.chaincodes.length||0}}
+        </span>
+      </label>
+      <div class="admin-dropdown-content">
+        <ul class="list">
+          <li ng-repeat="ch in ctl.chaincodes">{{::ch.name}} ({{::ch.version}})</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="admin-dropdown">
+      <input type="checkbox" id="channels">
+      <label class="admin-dropdown-header" for="channels">
+        <span class="admin-dropdown-header-name">
+          Channels
+            <svg class="chevron" width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.5 6L0.870834 0L12.1292 0L6.5 6Z" fill="white"/>
+            </svg>
+        </span>
+        <span class="admin-dropdown-header__quantity">
+        {{ctl.channels.length||0}}
+        </span>
+      </label>
+      <div class="admin-dropdown-content">
+          <ul>
+              <li ng-repeat="ch in ctl.channels">{{::ch.channel_id}}</li>
+          </ul>
+      </div>
+    </div>
+
+      <div class="admin-dropdown">
+          <input type="checkbox" id="instatiated-chaincodes">
+          <label class="admin-dropdown-header" for="instatiated-chaincodes">
+        <span class="admin-dropdown-header-name">
+            Instatiated Chaincodes
+            <svg class="chevron" width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M6.5 6L0.870834 0L12.1292 0L6.5 6Z" fill="white"/>
+            </svg>
+        </span>
+        <span class="admin-dropdown-header__quantity">
+            {{ctl.channelChaincodes.length||0}}
+        </span>
+          </label>
+          <div class="admin-dropdown-content">
+              <ul>
+                  <li ng-repeat="ch in ctl.channelChaincodes">{{::ch.name}} ({{::ch.version}})</li>
+              </ul>
+          </div>
+      </div>
+  </div>
+
+  <div class="admin-layout-right">
+    <h2 class="admin-h2">Notifications</h2>
+      <div class="admin-table-wrap">
+        <table class="admin-table">
+          <thead>
+          <tr>
+              <th>Request number </th>
+              <th>Action</th>
+              <th></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+              <td>VGUIX234</td>
+              <td>Request to register as <strong>BUYER</strong></td>
+              <td class="text-right">
+                  <button class="button button-primary">View details</button>
+              </td>
+          </tr>
+          <tr>
+              <td>VGUIX234</td>
+              <td>Request to register as <strong>BUYER</strong></td>
+              <td class="text-right">
+                  <button class="button button-primary">View details</button>
+              </td>
+          </tr>
+          <tr>
+              <td>VGUIX234</td>
+              <td>Request to register as <strong>BUYER</strong></td>
+              <td class="text-right">
+                  <button class="button button-primary">View details</button>
+              </td>
+          </tr>
+          </tbody>
+      </table>
+      </div>
+  </div>
 </div>
 
 
-<h2>Uploaded Chaincodes ({{ctl.chaincodes.length||0}})</h2>
-<ul class="list">
-  <li ng-repeat="ch in ctl.chaincodes">{{::ch.name}} ({{::ch.version}})</li>
-</ul>
-
-
-<h2>Channels ({{ctl.channels.length||0}})</h2>
-<ul class="list">
-  <li ng-repeat="ch in ctl.channels">{{::ch.channel_id}}</li>
-</ul>
 
 <!-- channel selector -->
- <div class="form-group">
-  <label>Channel</label>
-  <select ng-model="selectedChannel" material-select watch ng-options="o.channel_id for o in ctl.channels" placeholder="Channel ID" required>
-  </select>
-</div>
+ <!--<div class="form-group">-->
+  <!--<label>Channel</label>-->
+  <!--<select ng-model="selectedChannel" material-select watch ng-options="o.channel_id for o in ctl.channels" placeholder="Channel ID" required>-->
+  <!--</select>-->
+<!--</div>-->
 
-<div ng-show="selectedChannel">
+<!--<div ng-show="selectedChannel">-->
+<!--<div>-->
 
+  <!--<h2>Last block</h2>-->
+  <!--<json-formatter open="1" json="ctl.blockInfo"></json-formatter>-->
 
-  <h2>Instatiated Chaincodes ({{ctl.channelChaincodes.length||0}})</h2>
-  <ul class="list">
-    <li ng-repeat="ch in ctl.channelChaincodes">{{::ch.name}} ({{::ch.version}})</li>
-  </ul>
+  <!--<h2>Last transaction</h2>-->
+  <!--<div class="row">-->
+    <!--<div class="col s12">-->
+      <!--<ul class="tabs" tabs>-->
+        <!--<li class="tab col s3"><a class="active" href="#tab-result">Result</a></li>-->
+        <!--<li class="tab col s3"><a href="#tab-info">Info</a></li>-->
+        <!--<li class="tab col s3"><a href="#tab-json">Json</a></li>-->
+      <!--</ul>-->
+    <!--</div>-->
 
-  <h2>Last block</h2>
-  <json-formatter open="1" json="ctl.blockInfo"></json-formatter>
+    <!--<div id="tab-result" class="col s12">-->
+      <!--&lt;!&ndash; <json-formatter open="1" json="ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.proposal_response_payload.extension.results.ns_rwset"></json-formatter> &ndash;&gt;-->
+      <!--<json-formatter open="2" json="ctl.result"></json-formatter>-->
+    <!--</div>-->
 
+    <!--<div id="tab-info" class="col s12">-->
+      <!--<p ng-if="!ctl.transaction.transactionEnvelope"><i>No transaction</i></p>-->
+      <!--<certificate title="Transaction creator" data="ctl.transaction.transactionEnvelope.payload.data.actions[0].header.creator.IdBytes"></certificate>-->
+      <!--<div ng-repeat="e in ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.endorsements">-->
+        <!--<certificate title="Endorser" data="e.endorser.IdBytes"></certificate>-->
+        <!--&lt;!&ndash; <json-formatter open="1" json="e.endorser"></json-formatter> &ndash;&gt;-->
+      <!--</div>-->
+      <!--&lt;!&ndash; ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.proposal_response_payload.extension.results.ns_rwset[].rwset.writes[](key|value|is_delete) &ndash;&gt;-->
+    <!--</div>-->
 
-  <h2>Last transaction</h2>
-  <div class="row">
-    <div class="col s12">
-      <ul class="tabs" tabs>
-        <li class="tab col s3"><a class="active" href="#tab-result">Result</a></li>
-        <li class="tab col s3"><a href="#tab-info">Info</a></li>
-        <li class="tab col s3"><a href="#tab-json">Json</a></li>
-      </ul>
+    <!--<div id="tab-json" class="col s12">-->
+      <!--<json-formatter open="1" json="ctl.transaction"></json-formatter>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<div class="popup-overlay" style="display: none;">
+    <div class="popup">
+        <div class="popup-header">
+            Registration Request
+        </div>
+        <div class="popup-body">
+            <form>
+                <div class="popup-body-form-inner">
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Role</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label>Legal Entity</label>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="popup-buttons">
+                    <button type="submit" class="button button-primary button-lg">Accept</button>
+                    <button type="submit" class="button button-lg">Decline</button>
+                </div>
+            </form>
+        </div>
     </div>
 
-    <div id="tab-result" class="col s12">
-      <!-- <json-formatter open="1" json="ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.proposal_response_payload.extension.results.ns_rwset"></json-formatter> -->
-      <json-formatter open="2" json="ctl.result"></json-formatter>
-    </div>
-
-    <div id="tab-info" class="col s12">
-      <p ng-if="!ctl.transaction.transactionEnvelope"><i>No transaction</i></p>
-      <certificate title="Transaction creator" data="ctl.transaction.transactionEnvelope.payload.data.actions[0].header.creator.IdBytes"></certificate>
-      <div ng-repeat="e in ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.endorsements">
-        <certificate title="Endorser" data="e.endorser.IdBytes"></certificate>
-        <!-- <json-formatter open="1" json="e.endorser"></json-formatter> -->
-      </div>
-      <!-- ctl.transaction.transactionEnvelope.payload.data.actions[0].payload.action.proposal_response_payload.extension.results.ns_rwset[].rwset.writes[](key|value|is_delete) -->
-    </div>
-
-    <div id="tab-json" class="col s12">
-      <json-formatter open="1" json="ctl.transaction"></json-formatter>
-    </div>
-  </div>
 </div>
